--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"></com.journeyapps.barcodescanner.DecoratedBarcodeView>
 
-    <View
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/colorAccent"></View>
+        >
+    </android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
