--- a/app/src/main/res/layout/single_item_description.xml
+++ b/app/src/main/res/layout/single_item_description.xml
@@ -1,31 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginTop="4dp"
+    android:orientation="vertical"
+    android:background="@drawable/card_background"
+    android:padding="8dp">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
         android:id="@+id/imageProducts"
-        android:src="@mipmap/ic_launcher"
-        />
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@mipmap/ic_launcher" />
+
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HELLO WORLD"
         android:id="@+id/nameProducts"
-        android:layout_toEndOf="@id/imageProducts"
-        />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="X"
-        android:id="@+id/btnDelete"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@id/imageProducts"
+        android:text="HELLO WORLD"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/priceProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nameProducts"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@id/imageProducts"
+        android:text="PRICE" />
+
+    <LinearLayout
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@id/imageProducts"
+        android:layout_below="@id/priceProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/btnReduce"
+            android:src="@drawable/ic_remove_24dp"
+            android:background="@color/cardview_dark_background"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            />
+        <TextView
+            android:id="@+id/quantityTxt"
+            android:gravity="center"
+            android:background="@color/cardview_dark_background"
+            android:textColor="@android:color/white"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:text="1"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            />
+        <ImageView
+            android:id="@+id/btnAdd"
+            android:src="@drawable/ic_add_24dp"
+            android:background="@color/cardview_dark_background"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            />
+    </LinearLayout>
+
+
+    <ImageView
+        android:src="@drawable/ic_close_24dp"
+        android:id="@+id/btnRemove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        />
+        android:layout_marginEnd="16dp"
+        android:textSize="18sp" />
 
 
 </RelativeLayout>
